5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1756_672.log
== TEST (2019-05-22 14:41:56) 
-- CODE:
from numpy import*

n= array(eval(input(n:)))

v= ones(n,dtype=int )

-- ERROR:
File "XXXX", line 3
    n= array(eval(input(n:)))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:13) 
-- CODE:
from numpy import*



v= ones(1,dtype=int )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:13) 
-- CODE:
from numpy import*



v= ones(1,dtype=int )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:44:13) 
-- CODE:
from numpy import*

n = array(eval(input(n:)))

v= ones(n,dtype=int )

print(v)

-- ERROR:
File "XXXX", line 3
    n = array(eval(input(n:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:44:33) 
-- CODE:
from numpy import*

n = array(eval(input(n:)))
v= ones(n,dtype=int )

print(v)

-- ERROR:
File "XXXX", line 3
    n = array(eval(input(n:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:44:34) 
-- CODE:
from numpy import*

n = array(eval(input(n:)))
v= ones(n,dtype=int )

print(v)

-- EXECUTION TIME:
0.132831
-- ERROR:
  File "/home/codebench/codes/1756/672/main.py", line 3
    n = array(eval(input(n:)))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:44:37) 
-- CODE:
from numpy import*

n = array(eval(input(n:)))
v= ones(n,dtype=int )

print(v)

-- ERROR:
File "XXXX", line 3
    n = array(eval(input(n:)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:45:04) 
-- CODE:
from numpy import*

n = array(eval(input("n:")))
v= ones(n,dtype=int )

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:45:25) 
-- CODE:
from numpy import*

n = array(eval(input("n:")))
v= ones(n,dtype=int )

print(v)

-- EXECUTION TIME:
0.386469
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:45:26) 
-- CODE:
from numpy import*

n = array(eval(input("n:")))
v= ones(n,dtype=int )

print(v)

-- EXECUTION TIME:
0.30919
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:46:02) 
-- CODE:
from numpy import*

n = array(eval(input("n:")))
v= ones(n,dtype=int )

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:12:08) 
-- CODE:
from numpy import*

n x== array(eval(input("n:")))
v= ones(n,dtype=int )

print(v)

-- ERROR:
File "XXXX", line 3
    n x== array(eval(input()))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
